# calibre-tui

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.ru.md  README.zh-CN.md  README.zh.md  config.toml  demo.mkv
.github/workflows/: release-binaries.yml
doc/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ru.md  README.zh-CN.md  architecture.md  commands.md  configuration.md  controls.md  index.md  keymap.md  layout.md  quick-start.md  search.md  theme.md  troubleshooting.md
preset/: config.toml  keymap.toml
src/: app.rs  config.rs  config_file.rs  db.rs  filter.rs  keymap.rs  layout.rs  main.rs  pinyin.rs  sort.rs  theme.rs  ui.rs
src/app/: mod.rs  open.rs
src/app/filter/: mod.rs  tick.rs  update_filter_result.rs
src/command/: mod.rs  open.rs
src/command/filter/: filter_books.rs  main_loop.rs  mod.rs
src/config/: mod.rs
src/config/app/: mod.rs
src/config/default/: app.rs  i18n.rs  mod.rs  pipeline.rs  ui.rs
src/config/i18n/: filter.rs  mod.rs
src/config/pipeline/: mod.rs
src/config/preset/: config.toml
src/config/ui/: mod.rs
src/config/ui/filter/: mod.rs  table.rs
src/config/validate/: app.rs  ui.rs
src/i18n/filter/: french.rs  german.rs  japanese.rs  mod.rs  pinyin.rs  russian.rs  spanish.rs
src/pipeline/: event_tick.rs  mod.rs  update_ui_rects.rs  widget_tick.rs
src/ui/filter/: highlight.rs  mod.rs
src/utils/: book.rs  color.rs  db.rs  mod.rs
src/widget/: mod.rs  open.rs
src/widget/filter/: mod.rs  ui.rs  update.rs  widget.rs
