[package]
name = "calibre-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
dirs = "5.0"
open = "5.0"
pinyin = "0.10"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
rusqlite = { version = "0.31" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
unicode-width = "0.1"

