[package]
name = "calibre-tui"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
open = "5.3"
pinyin = { version = "0.11", features = ["heteronym"] }
ratatui = { version = "0.30", features = ["all-widgets"] }
rusqlite = "0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
unicode-width = "0.2"
